--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,45 @@
 	<groupId>tune2</groupId>
 	<artifactId>ts</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	
+	<build>
+		<sourceDirectory>src/main/java</sourceDirectory>
 
+		<plugins>
+
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.7.0</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+					<finalName>tune2timeseries-1.0.0</finalName>
+					<appendAssemblyId>false</appendAssemblyId>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+	
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/nz.ac.waikato.cms.weka/weka-stable -->
 		<dependency>
@@ -13,12 +51,18 @@
 			<artifactId>weka-stable</artifactId>
 			<version>3.8.0</version>
 		</dependency>
-<!-- https://mvnrepository.com/artifact/org.owasp/java-file-io -->
-<dependency>
-    <groupId>org.owasp</groupId>
-    <artifactId>java-file-io</artifactId>
-    <version>1.0.0</version>
-</dependency>
+		<!-- https://mvnrepository.com/artifact/org.owasp/java-file-io -->
+		<dependency>
+			<groupId>org.owasp</groupId>
+			<artifactId>java-file-io</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-io -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
+		</dependency>
 
 	</dependencies>
 </project>
