--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>tune2</groupId>
 	<artifactId>ts</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	
+
 	<build>
 		<sourceDirectory>src/main/java</sourceDirectory>
 
@@ -43,14 +43,18 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/nz.ac.waikato.cms.weka/weka-stable -->
-		<dependency>
-			<groupId>nz.ac.waikato.cms.weka</groupId>
-			<artifactId>weka-stable</artifactId>
-			<version>3.8.0</version>
-		</dependency>
+		<!-- https://mvnrepository.com/artifact/nz.ac.waikato.cms.weka/weka-dev -->
+<!-- https://mvnrepository.com/artifact/nz.ac.waikato.cms.weka/weka-dev -->
+<dependency>
+    <groupId>nz.ac.waikato.cms.weka</groupId>
+    <artifactId>weka-dev</artifactId>
+    <version>3.7.9</version>
+</dependency>
+
+		
 		<!-- https://mvnrepository.com/artifact/org.owasp/java-file-io -->
 		<dependency>
 			<groupId>org.owasp</groupId>
@@ -63,6 +67,20 @@
 			<artifactId>commons-io</artifactId>
 			<version>1.3.2</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.googlecode.matrix-toolkits-java/mtj -->
+		<dependency>
+			<groupId>com.googlecode.matrix-toolkits-java</groupId>
+			<artifactId>mtj</artifactId>
+			<version>0.9.14</version>
+		</dependency>
+
+<!-- https://mvnrepository.com/artifact/com.github.fommil.netlib/all -->
+<dependency>
+    <groupId>com.github.fommil.netlib</groupId>
+    <artifactId>all</artifactId>
+    <version>1.1.2</version>
+    <type>pom</type>
+</dependency>
 
 	</dependencies>
 </project>
