--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
     <version>1.1.2</version>
     <type>pom</type>
 </dependency>
+<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.6</version>
+</dependency>
 
 	</dependencies>
 </project>
